<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/profilePicture"
                        android:layout_width="81dp"
                        android:contentDescription="@string/app_name"
                        android:layout_height="81dp"
                        app:srcCompat="@drawable/ic_launcher_background"
                        tools:srcCompat="@tools:sample/avatars" />

                    <Button
                        android:id="@+id/updateProfileImage"
                        android:layout_width="84dp"
                        android:layout_height="68dp"
                        android:text="@string/Change"
                        android:onClick="captureImage"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="329dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="270dp"
                        android:layout_height="46dp"
                        android:ems="10"
                        android:hint="@string/yourName"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="270dp"
                        android:layout_height="46dp"
                        android:ems="10"
                        android:hint="@string/emailAddress"
                        android:inputType="textEmailAddress"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="270dp"
                        android:layout_height="46dp"
                        android:ems="10"
                        android:hint="@string/phoneNumber"
                        android:inputType="phone"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information" />

            <EditText
                android:id="@+id/major"
                android:layout_width="376dp"
                android:layout_height="39dp"
                android:ems="10"
                android:hint="@string/major"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/year"
                android:layout_width="376dp"
                android:layout_height="39dp"
                android:ems="10"
                android:hint="@string/year"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="382dp"
                android:layout_height="75dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="genderSelected"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="genderSelected"
                    android:text="@string/female" />
            </RadioGroup>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saveInformation"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>